--- a/html/game-loop.html
+++ b/html/game-loop.html
@@ -80,7 +80,7 @@
 </pre></div>
 
 
-<p>The main difference is that instead of <em>text commands</em>, the program is waiting for <em>user input events</em>&thinsp;&mdash;&thinsp;mouse clicks and key presses. It still works basically like the old text adventures where the program <span name="idle"><em>blocks</em></span> waiting for user input, which is a problem.</p>
+<p>The main difference is that instead of <em>text commands</em>, the program is waiting for <em>user input events</em>&#8202;&mdash;&#8202;mouse clicks and key presses. It still works basically like the old text adventures where the program <span name="idle"><em>blocks</em></span> waiting for user input, which is a problem.</p>
 <p>Unlike most other software, games keep moving even when the user isn&#8217;t providing input. If you sit staring at the screen, the game doesn&#8217;t freeze. Animations keep animating. Visual effects dance and sparkle. If you&#8217;re unlucky, that monster keeps chomping on your hero.</p>
 <aside name="idle">
 
