--- a/html/introduction.html
+++ b/html/introduction.html
@@ -55,11 +55,11 @@ and what could be cooler than a computer game that you programmed yourself?</p>
 <p>We never did get it running, and after a year we moved out of that classroom.
 (Much later when I actually knew a bit of BASIC, I realized that it was just a
 character generator for the table-top game, and not a game in itself.) But the
-die was cast&thinsp;&mdash;&thinsp;from here on out, I wanted to be a game programmer.</p>
+die was cast&#8202;&mdash;&#8202;from here on out, I wanted to be a game programmer.</p>
 <p>When I was in my teens, my family got a Macintosh with QuickBASIC and later
 THINK C. I spent almost all of my <span name="snakes">summer vacations</span>
 hacking together games. Learning on my own was slow and painful. I&#8217;d get
-something up and running easily&thinsp;&mdash;&thinsp;maybe a map screen, or a little puzzle &#8212;
+something up and running easily&#8202;&mdash;&#8202;maybe a map screen, or a little puzzle &#8212;
 but as the program grew, it got harder and harder.</p>
 <aside name="snakes">
 
@@ -282,7 +282,7 @@ can understand the code samples here with a little bit of effort.</p>
 <p>The goal of this book is <em>not</em> to teach you C++. The samples are kept as
 simple as possible and don&#8217;t represent good C++ style or usage. Read the code
 samples for the idea being expressed, not the code expressing it.</p>
-<p>In particular, the code is not written in &#8220;modern&#8221;&thinsp;&mdash;&thinsp;C++11 or newer&thinsp;&mdash;&thinsp;style.
+<p>In particular, the code is not written in &#8220;modern&#8221;&#8202;&mdash;&#8202;C++11 or newer&#8202;&mdash;&#8202;style.
 It does not use the standard library and rarely uses templates. This makes for
 &#8220;bad&#8221; C++ code, but I hope that by keeping it stripped down, it will be more
 approachable to people coming from C, Objective-C, Java, and other languages.</p>
